# micro-learning-backend

./: .gitignore  Dockerfile  README.md  create_superuser.py  db.sqlite3  entrypoint.sh  pyproject.toml  requirements.txt
api/: models.py
micro_learning/: middleware.py  settings.py
tests/: test_api.py  test_print.py
