[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jeremy <jeremy.gross@etu.univ-amu.fr>"]
readme = "README.md"
packages = [{ include = "api" }]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.3.1"
python-dotenv = "^1.0.0"
pytest-django = "^4.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
